# ru-smb-companies

./: Geocoding.ipynb  Make CSV.ipynb  Make Dataset.ipynb  Make Datasets.ipynb  Make Yearly Panel.ipynb  Post Processing.ipynb  README.md  Tax Service Opendata Processing.ipynb  Validation.ipynb  Vizualization.ipynb  XML Parsing Methods Comparison.ipynb  Yandex Disk Loader.ipynb  city.csv  main.py  make_csv.py  pyproject.toml  revexp.xsl  rsmp.xsl  sshr.xsl
.github/workflows/: draft-pdf.yml  publish.yml
assets/: reestr.xsl  regions.csv
notebooks/: Geocoding.ipynb  Make Datasets.ipynb  Validation.ipynb  codes.json
paper/: paper.bib  paper.md
rmsp/: __main__.py  main.py
rmsp/stages/: download.py
rmsp/tests/: common.py  test_cli.py
ru_smb_companies/: __main__.py  main.py
ru_smb_companies/assets/: rosstat-org-stats.csv
ru_smb_companies/stages/: aggregate.py  download.py  extract.py  geocode.py  georeference.py  panelize.py  spark_stage.py
ru_smb_companies/tests/: common.py  test_aggregator.py  test_cli.py  test_downloader.py  test_extractor.py  test_geocoder.py  test_panelizer.py
ru_smb_companies/utils/: enums.py  regions.py  spark_schemas.py
russian_sme_registry/assets/: activity_codes_classifier.csv
scripts/: Yandex Disk Loader.py  aggregate.py  elements.py  extract.py  georeference.py  make_panel.py  spark_schemas.py
stages/: aggregate.py  download.py  extract.py  georeference.py
utils/: elements.py
